# furious

./: .gitignore  CMakeLists.txt  README.md
include/furious/: application.hpp  imconfig.h
include/furious/audio/: audio_buffer.hpp  audio_clip.hpp  audio_decoder.hpp  audio_engine.hpp
include/furious/core/: clip_commands.hpp  command.hpp  enum_utils.hpp  media_source.hpp  pattern.hpp  pattern_commands.hpp  pattern_evaluator.hpp  pattern_library.hpp  project.hpp  project_data.hpp  tempo.hpp  timeline_clip.hpp  timeline_data.hpp  track.hpp
include/furious/scripting/: lua_bindings.hpp  script_engine.hpp
include/furious/ui/: main_window.hpp  patterns_window.hpp  profiler_window.hpp  timeline.hpp  transport_controls.hpp  viewport.hpp
include/furious/video/: source_library.hpp  video_decoder.hpp  video_engine.hpp
scripts/effects/: auto_ytpmv.lua  lerp_transform.lua
src/: application.cpp  main.cpp
src/audio/: audio_buffer.cpp  audio_clip.cpp  audio_decoder.cpp  audio_engine.cpp
src/core/: command.cpp  pattern.cpp  pattern_evaluator.cpp  pattern_library.cpp  project.cpp  project_data.cpp  tempo.cpp  timeline_data.cpp
src/scripting/: lua_bindings.cpp  script_engine.cpp
src/ui/: main_window.cpp  patterns_window.cpp  profiler_window.cpp  timeline.cpp  transport_controls.cpp  viewport.cpp
src/video/: source_library.cpp  video_decoder.cpp  video_engine.cpp
tests/: audio_buffer_test.cpp  audio_decoder_test.cpp  audio_test.cpp  command_test.cpp  effects_test.cpp  pattern_evaluator_test.cpp  pattern_test.cpp  project_data_test.cpp  project_test.cpp  script_engine_test.cpp  source_library_test.cpp  tempo_test.cpp  timeline_data_test.cpp  timeline_test.cpp  video_test.cpp
tests/integration/: audio_engine_tests.cpp  clip_tests.cpp  integration_main.cpp  pattern_tests.cpp  source_tests.cpp  sync_tests.cpp  timeline_tests.cpp  transport_tests.cpp  undo_redo_tests.cpp  user_flow_tests.cpp  viewport_tests.cpp
